Fix relative link to first notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,15 +6,8 @@
    "source": [
     "# Interactive `pymf6` examples\n",
     "\n",
-    "Start example: [ex02-tidal](../notebooks/ex02-tidal.ipynb)"
+    "Start example: [ex02-tidal](notebooks/ex02-tidal.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
