Add description for running scripts

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,7 +6,50 @@
    "source": [
     "# Interactive `pymf6` examples\n",
     "\n",
-    "Start example: [ex02-tidal](notebooks/ex02-tidal.ipynb)"
+    "To start example in Notebook click: [ex02-tidal](notebooks/ex02-tidal.ipynb)\n",
+    "\n",
+    "# Scripts\n",
+    "\n",
+    "Open a new terminal *File --> New --> Terminal*\n",
+    "\n",
+    "## Modifying Constant Head Values\n",
+    "\n",
+    "Change to example directory:\n",
+    "\n",
+    "    cd examples/ex16-mfnwt2\n",
+    "    \n",
+    "and type:\n",
+    "\n",
+    "    python ../../scripts/chd.py\n",
+    "    \n",
+    "    \n",
+    "## Showing Temporal Information\n",
+    "\n",
+    "Change to example directory:\n",
+    "\n",
+    "    cd examples/ex02-tidal\n",
+    "    \n",
+    "and type:\n",
+    "\n",
+    "    python ../../scripts/temporal.py\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can load the scripts here.\n",
+    "Open a new Notebook *File --> New --> Terminal* (Select \"Python 3\" as kernel) \n",
+    "In a new cell type:\n",
+    "\n",
+    "    %load scripts/chd.py\n",
+    "\n",
+    "and in another cell type:\n",
+    "\n",
+    "    %load scripts/temporal.py\n",
+    "    \n",
+    "to see the content of both scripts."
    ]
   }
  ],
